--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -8,5 +8,5 @@
 
 = Sub projects =
 
-  * ambiance-components  : the parent project for ambiance componant.
-  * ambiance-transporter : this component provide file transfert in two methods.
+  * [ambiancecomponents reindeer ambiance-components]  : the parent project for ambiance componant.
+  * [ambiance-transporter] : this component provide file transfert in two methods.
